changing z-index on front and back trying to fix issues with ios after flip background bubbles show up over cards

--- a/style.css
+++ b/style.css
@@ -303,7 +303,7 @@ h1{
 
 .front8{
   position: absolute;
-  z-index: 1;
+  z-index: 2;
   
   background-color: lightblue;
   
@@ -329,7 +329,7 @@ h1{
 
 .back8{
   position: absolute;
-  z-index: 1;
+  z-index: 2;
 
   border: solid;
   border-width: 10px;
@@ -375,7 +375,7 @@ h1{
 
 .front16{
   position: absolute;
-  z-index: 1;
+  z-index: 2;
 
   background-color: lightblue;
 
@@ -448,7 +448,7 @@ h1{
 
 .front32{
   position: absolute;
-  z-index: 1;
+  z-index: 2;
 
   background-color: lightblue;
 
